--- a/src/posts/14-post-number-fourteen/post.mdx
+++ b/src/posts/14-post-number-fourteen/post.mdx
@@ -35,7 +35,7 @@ servers) is thankfully very easy.
 Consider this JavaScript example - though it'll always work, no matter which technology you're
 using:
 
-```
+```js
 fetch('https://some-api.com/my-data').then(...)
 ```
 
@@ -56,7 +56,7 @@ your machine.
 
 Again, consider this JS example:
 
-```
+```js
 fetch('localhost:3000/demo').then(...)
 ```
 
@@ -71,7 +71,7 @@ But Docker has got you covered!
 
 You just need to change this snippet like this:
 
-```
+```js
 fetch('host.docker.internal:3000/demo').then(...)
 ```
 
@@ -98,7 +98,7 @@ SOME_NAME and you can then attach multiple Containers to one and the same Networ
 
 Like this:
 
-```
+```bash
 docker run -network my-network --name cont1 my-image
 docker run -network my-network --name cont2 my-other-image
 ```
@@ -108,7 +108,7 @@ Both cont1 and cont2 will be in the same Network.
 Now, you can simply use the Container names to let them communicate with each other - again,
 Docker will resolve the IP for you (see above).
 
-```
+```js
 fetch('cont1/my-data').then(...)
 ```
 
