--- a/src/posts/16-post-number-sixteen/post.mdx
+++ b/src/posts/16-post-number-sixteen/post.mdx
@@ -19,23 +19,22 @@ This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 ## Steps
 1. Set up the project and install `taliwindcss` and its peer dependencies vis npm.
 
-  ```
-  $ npm init svelte@next sveltekit-demo
-  $ cd sveltekit-demo
-  $ npm install -D tailwindcss postcss autoprefixer
+  ```bash
+  npm init svelte@next sveltekit-demo
+  cd sveltekit-demo
+  npm install -D tailwindcss postcss autoprefixer
   ```
 
 2. Generate `tailwind.config.cjs` and `postcss.config.cjs` configuration files
 
-  ```
-  $ npx tailwind init tailwind.config.cjs -p
-  $ mv postcss.config.js postcss.config.cjs
+  ```bash
+  npx tailwind init tailwind.config.cjs -p
+  mv postcss.config.js postcss.config.cjs
   ```
 
-3. Configure your template paths in `tailwind.config.`
+3. Configure your template paths in `tailwind.config.cjs`
 
-  ```js
-  // tailwind.config.cjs
+  ```js file=./tailwind.config.cjs
   module.exports = {
     content: ['./src/**/*.{html,js,svelte,ts}'],
   theme: {
@@ -46,16 +45,16 @@ This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 4. Add the Tailwind directives to your CSS
   - Create a `./src/app.css` file and add the `@tailwind` directives for each of Tailwind's layers.
 
-  ```css
+  ```css file=./src/app.css
   @tailwind base;
   @tailwind components;
   @tailwind utilities;
   ```
    
 5. Import the CSS file
-  - Create a `./src/routes/__layout.svelte` file and import the `app.css` file we've just created in the step 4.
+  - Create a layout svelte file and import the `app.css` file we've just created in the step 4.
 
-  ```js
+  ```jsx file=./src/routes/__layout.svelte
   <script>
     import "../app.css"
   </script>
@@ -65,14 +64,14 @@ This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 
 6. Run npm development
 
-  ```
-  $ npm run dev
+  ```bash
+  npm run dev
   ```
 
 7. Try using Tailwind
 - Open up `index.svelte` and try this.
 
-  ```svlete
+  ```jsx file=./src/routes/index.svelte
   <h1 class="font-bold underline">
     Hello Tailwind!!!
   </h1>
