--- a/src/posts/18-post-number-eighteen/post.mdx
+++ b/src/posts/18-post-number-eighteen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_gatsby_githubpages.png
 date: 2022-03-16
 author: youngjae lim
 category: Gatsby 
+tags: ["react"]
 readTime: 30
 embeddedImages:
   - ./images/github_dev_branch.png
