--- a/src/projects/Project_02/project.mdx
+++ b/src/projects/Project_02/project.mdx
@@ -5,6 +5,7 @@ image: ./images/main.png
 date: 2021-09-02
 author: Youngjae Lim
 category: PROJECT
+tags: ["next.js", "cms", "strapi", "react"]
 readTime: 3
 ---
 
