Added more tags to posts, cleaned up some react-icons that make some troubles for alingment with text

--- a/src/posts/11-post-number-eleven/post.mdx
+++ b/src/posts/11-post-number-eleven/post.mdx
@@ -5,7 +5,7 @@ image: ./images/main.png
 date: 2022-02-24
 author: youngjae lim
 category: Data
-tags: ["data", "tool", "data analysis", "data publishing", "python"]
+tags: ["data", "tool", "python"]
 readTime: 50
 embeddedImages:
   - ./images/html-1.png
