--- a/src/posts/12-post-number-twelve/post.mdx
+++ b/src/posts/12-post-number-twelve/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_images_containers.png
 date: 2021-02-24
 author: youngjae lim
 category: Docker
+tags: ["docker", "tool"]
 readTime: 10
 ---
 
