--- a/src/posts/13-post-number-thirteen/post.mdx
+++ b/src/posts/13-post-number-thirteen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_data_volumes.png
 date: 2021-02-27
 author: youngjae lim
 category: Docker
+tags: ["docker", "tool"]
 readTime: 10
 ---
 
