--- a/src/posts/15-post-number-fifteen/post.mdx
+++ b/src/posts/15-post-number-fifteen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_docker_compose.png
 date: 2021-04-13
 author: youngjae lim
 category: Docker
+tags: ["docker", "tool"]
 readTime: 10
 ---
 
