--- a/src/posts/16-post-number-sixteen/post.mdx
+++ b/src/posts/16-post-number-sixteen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_tailwind_svelte.png
 date: 2021-06-24
 author: youngjae lim
 category: Svelte
+tags: ["sveltekit", "tailwindcss", "css"]
 readTime: 10
 ---
 
