--- a/src/posts/17-post-number-seventeen/post.mdx
+++ b/src/posts/17-post-number-seventeen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_pyenv.png
 date: 2022-03-07
 author: youngjae lim
 category: Python
+tags: ["python", "tool", "macos"]
 readTime: 5
 ---
 
