--- a/src/posts/20-post-number-twenty/post.mdx
+++ b/src/posts/20-post-number-twenty/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_wordpress.png
 date: 2022-03-20
 author: youngjae lim
 category: SvelteKit 
+tags: ["sveltekit", "cms", "wordpress", "graphql"]
 readTime: 10
 embeddedImages:
   - ./images/install_local_1.png
