--- a/src/posts/2022-03-25-Utterances/post.mdx
+++ b/src/posts/2022-03-25-Utterances/post.mdx
@@ -5,7 +5,7 @@ image: ./images/main_utterances.png
 date: 2022-03-25
 author: youngjae lim
 category: Gatsby 
-tags: ["Gatsby", "tool", "utterances", "widget", "github"]
+tags: ["gatsby", "tool", "utterances", "widget", "github", "github issues"]
 readTime: 10
 embeddedImages:
   - ./images/utterance_install_1.png
