--- a/src/projects/Project_01/project.mdx
+++ b/src/projects/Project_01/project.mdx
@@ -5,6 +5,7 @@ image: ./images/main.png
 date: 2022-02-15
 author: Youngjae Lim
 category: PROJECT
+tags: ["go", "utility", "docker", "redis"]
 readTime: 2
 ---
 
