--- a/src/projects/Project_03/project.mdx
+++ b/src/projects/Project_03/project.mdx
@@ -5,6 +5,7 @@ image: ./images/main.png
 date: 2022-01-20
 author: Youngjae Lim
 category: PROJECT
+tags: ["node.js", "express.js", "full-stack", "react", "mern-stack", "mongodb"]
 readTime: 3
 ---
 
