--- a/src/projects/Project_04/project.mdx
+++ b/src/projects/Project_04/project.mdx
@@ -5,6 +5,7 @@ image: ./images/main.png
 date: 2022-02-20
 author: Youngjae Lim
 category: PROJECT
+tags: ["node.js", "express.js", "mongodb"]
 readTime: 3
 ---
 
