--- a/src/posts/19-post-number-nineteen/post.mdx
+++ b/src/posts/19-post-number-nineteen/post.mdx
@@ -5,6 +5,7 @@ image: ./images/main_git_branch.png
 date: 2022-03-18
 author: youngjae lim
 category: Git 
+tags: ["git", "devops", "tool"]
 readTime: 5
 ---
 
