Added Marker component to highlight words in yellow

--- a/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
+++ b/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
@@ -14,7 +14,7 @@ import { GatsbyImage, getImage } from 'gatsby-plugin-image'
 
 ## Overview
 
-This article shows you some useful vim commands that I enjoy using particularly when I code. I will add more commands once in a while, so this article will be constantly updated. I will keep you posted on that.
+This article shows you some useful <mark>vim commands that I enjoy using particularly when I code. I will add more commands once in a while,</mark> so this article will be constantly updated. I will keep you posted on that.
 
 ## Navigation
 
