--- a/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
+++ b/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
@@ -18,6 +18,27 @@ This article shows you some useful vim commands that I enjoy using particularly 
 
 ## Navigation
 
+
+## Editing
+
+### vim-surround plugin
+
+I am a big fan of `vim-surround` plugin which allows me to easily edit `HTML`. One of annoying thing when editing HTML is that you have to surround a certain set of elements with anther element. For example,
+
+  ```html
+  <span>Hello!!</span>
+  ```
+
+I would like to surround the `span` element with `div` element. Here is just one line of span element. But what if you have many lines of elements that you want to surround? Then what I usually do is to auto complete the `div` tag and move the `span` tag bewteen the opening div and the closing div.
+
+But with the help of `vim-surround`, you just visually select(i.e., linewise `visual mode`) the line(s) of codes that you woudl like to surround and then hit `S<div>`. This will make:
+
+  ```html add=1,3
+  <div>
+    <span>Hello!</span>
+  </div>
+  ```
+
 <Link to='/posts' className='btn center-btn'>
   all posts
 </Link>
