Added autolinks on heading h1, h2, h3, h4

--- a/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
+++ b/src/posts/2022-03-24-Useful-Vim-Commands/post.mdx
@@ -7,6 +7,7 @@ author: youngjae lim
 category: Vim 
 tags: ["vim", "tool"]
 readTime: 10
+embeddedImages:
 ---
 
 import { Link } from 'gatsby'
@@ -23,7 +24,7 @@ This article shows you some useful vim commands that I enjoy using particularly 
 
 ### vim-surround plugin
 
-I am a big fan of `vim-surround` plugin which allows me to easily edit `HTML`. One of annoying thing when editing HTML is that you have to surround a certain set of elements with anther element. For example,
+I am a big fan of `vim-surround` plugin which allows me to easily add surroundings such as parentheses, brackets, quotes, HTML tags, etc. 
 
   ```html
   <span>Hello!!</span>
