Improved sidebar menu

--- a/src/posts/2022-03-25-Utterances/post.mdx
+++ b/src/posts/2022-03-25-Utterances/post.mdx
@@ -24,7 +24,7 @@ This article shows you how to add `utterances` light weight comments widget to y
 
 ## Caveats
 
-- Needs Github authentication by users
+- Needs Github authentication by users to make a comment
 - There is no reply functionality
 
 ## What you need
