--- a/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
+++ b/src/posts/2022-03-26-Social-Share-Buttons/post.mdx
@@ -1,11 +1,11 @@
 ---
-title: How To Add Social Share Buttons To Gatsby Blog 
+title: How To Add Social Share Buttons To Gatsby Blog
 slug: how-to-add-social-share-buttons-to-gatsby-blog
 image: ./images/main_social_share_buttons.png
 date: 2022-03-26
 author: youngjae lim
-category: Gatsby 
-tags: ["gatsby", "ui"]
+category: Gatsby
+tags: ['gatsby', 'ui']
 readTime: 10
 embeddedImages:
 ---
@@ -15,17 +15,35 @@ import { GatsbyImage, getImage } from 'gatsby-plugin-image'
 
 ## Overview
 
-This article shows you how to add social share buttons to your Gatsby blog post. 
+This article shows you how to add social share buttons to your Gatsby blog post.
 
 ## Why you need social share buttons
 
+Social share buttons help create a presence on social media platforms as well as providing other benefits for your website:
+
+**1. It can improve user experience**
+
+- Users on your website can quickly share your conent not going through all the hassles like copying and pasting a resource url to social media. Just one click and you're done.
+
+**2. It can help SEO**
+
+- Google determines search results listings by using many ranking signals, among them are the number of times that content is shared, tweeted, liked, or posted to other social media.
+
+**3. It can boost brand exposure**
+
+- By people sharing your contents, it is possible that content is getting introduced to an entirely new group of people. As a result, it could bring new users to your website.
+
+**4. It can improve reach to your target audience**
+
+- Let's say now you've written this rich content blog post. But does it reach to right target audience. If you've written a tech blog, people sharing it might share it to tech commnunity, forum, etc. In turn, it reaches to more relavant target audience.
+
 ## What you need
 
-1. `react-share` package
+- `react-share` package
+
   ```bash
   npm install react-share
   ```
-2. `react-icons` package 
 
 ## SocialShareButtons component
 
@@ -79,8 +97,101 @@ const Wrapper = styled.div`
 
 ## Update the existing Blog Post template
 
-```jsx file=./src/templates/post-template.js add=1
+This is a `post-template.js` that I currently use to build each page of post in this site. Note that I show only core part of the codes here. The entire source code is linked [here](https://github.com/youngjae-lim/youngjae-lim.github.io/blob/dev/src/templates/post-template.js).
 
+As you see in the codes, I added the `SocialShareButtons` component to the post template so that Gastby can create pages with it in build time.
+
+```jsx file=./src/templates/post-template.js add=9,73-76
+import React from 'react'
+import Layout from '../components/Layout'
+import TagsList from '../components/TagsList'
+import TableOfContents from '../components/TableOfContents'
+import Seo from '../components/Seo'
+import Banner from '../components/Banner'
+import PrevAndNext from '../components/PrevAndNext'
+import Comments from '../components/Comments'
+import SocialShareButtons from '../components/SocialShareButtons'
+import styled from 'styled-components'
+import { graphql } from 'gatsby'
+import { MDXRenderer } from 'gatsby-plugin-mdx'
+import { GatsbyImage, getImage } from 'gatsby-plugin-image'
+
+const PostTemplate = ({ data, pageContext }) => {
+  const url = typeof window !== 'undefined' ? window.location.href : ''
+  const pathName = typeof window !== 'undefined' ? window.location.pathname : ''
+
+  const {
+    title,
+    tags,
+    image,
+    date,
+    embeddedImages,
+    videoSourceURL,
+    videoTitle,
+  } = data.mdx.frontmatter
+
+  const { previousPost, nextPost } = pageContext
+
+  const { body, tableOfContents, excerpt } = data.mdx
+
+  const description = title ? title : excerpt
+
+  const isThereTableOfContent = Object.keys(tableOfContents).length !== 0
+
+  return (
+    <Layout>
+      <Seo
+        title={title}
+        description={excerpt}
+        image={image.childImageSharp.resize}
+        pathname={pathName}
+      />
+      <Wrapper toc={isThereTableOfContent}>
+        {/* Table of Contents */}
+        {isThereTableOfContent && (
+          <TableOfContents items={tableOfContents.items} />
+        )}
+        {/* Post Info */}
+        <article className='mdx-page'>
+          <GatsbyImage
+            image={getImage(image)}
+            alt={title}
+            className='main-img'
+          />
+          <div className='post-info'>
+            <h1>{title}</h1>
+            {tags?.length > 0 ? <TagsList tags={tags} isPost={true} /> : ''}
+            <p>{date}</p>
+            <div className='underline' />
+            <div className='social-buttons-top'>
+              <SocialShareButtons url={url} description={description} />
+            </div>
+          </div>
+          <MDXRenderer
+            embeddedImages={embeddedImages}
+            videoSourceURL={videoSourceURL}
+            videoTitle={videoTitle}
+          >
+            {body}
+          </MDXRenderer>
+          <div className='social-buttons'>
+            <span>If you found this article informative, please share: </span>
+            <SocialShareButtons url={url} description={description} />
+          </div>
+          <PrevAndNext prev={previousPost} next={nextPost} />
+          <Comments />
+        </article>
+
+        {/* Banner on the right side */}
+        <article>
+          <Banner isPost={true} />
+        </article>
+      </Wrapper>
+    </Layout>
+  )
+}
+
+export default PostTemplate
 ```
 
 <Link to='/posts' className='btn center-btn'>
